# efs-collection

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  crontab-collectes  pyproject.toml  run-collectes.sh
api-carto-client/: .gitignore  Dockerfile  pyproject.toml
api-carto-client/api_carto_client/: __init__.py
api-carto-client/api_carto_client/models/: __init__.py  sampling_location_entity.py  sampling_location_result.py  sampling_town_entity.py
app/: main.py  pyproject.toml
app/app/core/: database.py  settings.py
app/app/models/: __init__.py  location.py  schedules.py
app/app/schemas/: collection.py  location.py  schedules.py
collecte-info/: .env.example  Dockerfile  cli.py  get_codes_postaux.py  get_collectes.py  get_collections.py  get_lieux_collecte.py  get_schedules.py  pyproject.toml  settings.py
collecte-info/alembic/: env.py
collecte-info/alembic/versions/: 351262a5207c_initial_efs_schema.py  4882f4a1012c_create_grafana_monitoring_views.py  60f8ec4c3731_initial_efs_schema.py  66c2bc90e068_reflect_crawler_changes.py  a8c4c6d8cc51_add_ondelete_cascade.py
collecte-info/collecte/: get_collections.py  get_locations.py  get_schedules.py  settings.py
collecte-info/collecte/core/: database.py  logging.py  settings.py
collecte-info/collecte/models/: __init__.py  base.py  collection.py  group.py  location.py  schedule.py  schedules.py  snapshot.py
collecte-info/collecte/schemas/: __init__.py  collection.py  group.py  location.py  schedule.py  schedules.py  snapshot.py
collecte-info/collecte/services/: __init__.py  collections.py  groups.py  locations.py  schedules.py  utils.py
collecte-info/collecte/tasks/: collections.py  efs_batch_processor.py  groups.py  locations.py  schedules.py
collecte-info/data/: collections.jsonl  groupement_F00001.json  groupement_F00002.json  groupement_F00003.json  groupement_F00004.json  groupement_F00005.json  groupement_F00006.json  groupement_F00007.json  groupement_F00008.json  groupement_F00009.json  groupement_F00010.json  groupement_F00011.json  groupement_F10101.json  groupement_F10102.json  groupement_F10103.json  groupement_F10105.json  groupement_F10106.json  groupement_F10107.json  groupement_F10108.json  groupement_F10110.json  groupement_F10111.json  groupement_F10112.json  groupement_F10115.json  groupement_F10117.json  groupement_F10118.json  groupement_F10119.json  groupement_F10120.json  groupement_F10122.json  groupement_F10123.json  groupement_F10124.json  groupement_F10125.json  groupement_F10126.json  groupement_F10127.json  groupement_F10128.json  groupement_F10129.json  groupement_F10130.json  groupement_F10131.json  groupement_F10132.json  groupement_F10133.json  groupement_F10134.json  (+851 more)
collecte-info/tests/: conftest.py  test_cli.py
collecte-info/tests/data/: collections.json  groups.json  locations.json  schedules.json
collecte-info/tests/services/: test_collections.py  test_groups.py  test_locations.py  test_schedules.py  test_utils.py
collecte-info/tests/tasks/: test_collections.py  test_groups.py  test_locations.py  test_schedules.py
collector/: Dockerfile  cli.py  pyproject.toml
collector/alembic/: env.py
collector/alembic/versions/: 01b6400514f8_create_grafana_user.py
collector/collector/core/: database.py  logging.py  settings.py
collector/collector/models/: collection.py  group.py  location.py  schedules.py
crawler/: .dockerignore  (+5 more)
(+83 files in other folders)
