[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair[all]>=5.5.0",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
]
