[project]
name = "collecte-info"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "alembic>=1.16.4",
    "api-carto-client",
    "asyncpg>=0.30.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.42",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
api-carto-client = { path = "../api-carto-client", editable = true }
