[project]
name = "collecte-info"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "aiohttp>=3.12.15",
    "alembic>=1.16.4",
    "api-carto-client",
    "async-lru>=2.0.5",
    "asyncpg>=0.30.0",
    "crawler",
    "loki-logger-handler>=1.1.2",
    "pydantic-settings==2.6.0",
    "sqlalchemy>=2.0.42",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
api-carto-client = { path = "../api-carto-client", editable = true }
crawler = { path = "../crawler", editable = true }

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

[tool.ruff]
exclude = [".venv", "alembic", "storage"]

[tool.ruff.lint]
select = ["F", "I", "UP"]
