[project]
name = "collector"
version = "1.0.0"
description = "A python CLI to collect data for EFS's mobile blood collections"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.5",
    "aiohttp>=3.12.15",
    "alembic>=1.16.4",
    "api-carto-client",  # This will use workspace version
    "async-lru>=2.0.5",
    "asyncpg>=0.30.0",
    "crawler",  # This will use workspace version
    "loki-logger-handler>=1.1.2",
    "pydantic-settings==2.6.0",
    "sqlalchemy>=2.0.42",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

# Remove the separate uv.lock - workspace will manage this
# Add build system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
exclude = [".venv", "alembic", "storage"]

[tool.ruff.lint]
select = ["F", "I", "UP"]